# ReboundTheGame

./: CMakeLists.txt  LICENSE  README.md  add-license.sh  settings-scene-frame.xcf  title-background-project.xcf
Commons/: CMakeLists.txt  ContainerEntry.hpp  InputStream.hpp  OutputStream.hpp  VarLength.hpp  apply.hpp  assert.hpp  chronoUtils.hpp  function_traits.hpp  generic_ptrs.hpp  grid.hpp  iterator_pairs.hpp  minmax.hpp  non_copyable_movable.hpp  predUtils.hpp  rect.hpp  rectUtils.hpp  streamReaders.hpp  streamWriters.hpp  transforms.cpp  transforms.hpp  type_id.hpp  vector_math.hpp
Commons/streams/: FileInputStream.cpp  FileInputStream.hpp  FileOutputStream.cpp  FileOutputStream.hpp  MemoryInputStream.cpp  MemoryInputStream.hpp  MemoryOutputStream.cpp  MemoryOutputStream.hpp
Coroutine/: CMakeLists.txt  Coroutine.hpp  TargetArch.cmake  main.c  main.cpp
Coroutine/asm-impl/: coroutine-macosx.s  coroutine-unix-x64.s  coroutine-win-fiber.c  coroutine-win-i386.asm  coroutine-win-x64.asm  coroutine.h  coroutine_unix32.s  coroutine_unix64.s
CppMunk/: CMakeLists.txt
CppMunk/include/: cpVectOperations.h  cppmunk.h
CppMunk/src/: Arbiter.cpp  Body.cpp  BoundingBox.cpp  CircleShape.cpp  Constraint.cpp  CustomDeleter.h  DampedRotarySpring.cpp  DampedSpring.cpp  GearJoint.cpp  GrooveJoint.cpp  LayerMask.cpp  PinJoint.cpp  PivotJoint.cpp  PolyShape.cpp  RatchetJoint.cpp  RotaryLimitJoint.cpp  SegmentShape.cpp  Shape.cpp  SimpleMotor.cpp  SlideJoint.cpp  Space.cpp
Languages/: CMakeLists.txt  en-us.lnx  keynames.lnxinc  pt-br.lnx
MainGame/: CMakeLists.txt  ColorList.hpp  Services.hpp  defaults.hpp  execDir.cpp  execDir.hpp  execDir.mm  main.cpp  report.txt
MainGame/audio/: AudioCommand.hpp  AudioException.hpp  AudioInstance.cpp  AudioInstance.hpp  AudioManager.cpp  AudioManager.hpp  Sound.hpp  readVorbis.cpp  readVorbis.hpp  readWav.cpp  readWav.hpp
MainGame/collision/: CollisionBodyHandle.hpp  CollisionHandler.cpp  CollisionHandler.hpp  chipmunkWrapperTypes.hpp
MainGame/data/: ExpressionCommands.cpp  ExpressionCommands.hpp  LevelData.cpp  LevelData.hpp  RIFF.cpp  RIFF.hpp  RoomData.cpp  RoomData.hpp  TileSet.cpp  TileSet.hpp
MainGame/drawables/: ChipmunkDebugDrawable.cpp  ChipmunkDebugDrawable.hpp  GUIMap.cpp  GUIMap.hpp  GUIMeter.cpp  GUIMeter.hpp  Quad.cpp  Quad.hpp  ScissorRectUtils.cpp  ScissorRectUtils.hpp  SegmentedSprite.cpp  SegmentedSprite.hpp  Sprite.cpp  Sprite.hpp  TextDrawable.cpp  TextDrawable.hpp  TexturedColoredVertexArray.hpp  TexturedVertexArray.hpp  Tilemap.cpp  Tilemap.hpp  WaterBody.cpp  WaterBody.hpp  WrapPlane.cpp  WrapPlane.hpp
MainGame/gameplay/: LevelPersistentData.cpp  LevelPersistentData.hpp  MapGenerator.cpp  MapGenerator.hpp  PlayerController.hpp  SavedGame.cpp  SavedGame.hpp  Script.cpp  Script.hpp  ScriptedActions.cpp  ScriptedActions.hpp  ScriptedPlayerController.cpp  ScriptedPlayerController.hpp  VirtualActions.hpp
MainGame/glad/: glad.c  glad.h
MainGame/input/: CommonActions.cpp  CommonActions.hpp  InputManager.cpp  InputManager.hpp  InputPlayerController.cpp  InputPlayerController.hpp  InputSource.cpp  InputSource.hpp  JoystickInfo.hpp  KeyNames.cpp  KeyNames.hpp  PlayerController.cpp  PlayerController.hpp  preventSleeping.cpp  preventSleeping.hpp
MainGame/language/: KeyboardKeyName.cpp  KeyboardKeyName.hpp  LangID.hpp  LanguageDescriptor.cpp  LanguageDescriptor.hpp  LocalizationManager.cpp  LocalizationManager.hpp  UnixKeyboardMaps.cpp  UnixKeyboardMaps.hpp  convenienceConfigText.cpp  convenienceConfigText.hpp
MainGame/misc/: BitCounts.cpp  BitCounts.hpp  ShapeUtils.cpp  ShapeUtils.hpp  textUtils.cpp  textUtils.hpp
MainGame/objects/: Bomb.cpp  Bomb.hpp  Camera.cpp  Camera.hpp  Collectible.cpp  Collectible.hpp  Enemy.cpp  Enemy.hpp  GUI.cpp  GUI.hpp  GameObject.cpp  GameObject.hpp  GameObjectFactory.cpp  GameObjectFactory.hpp  InteractableObject.cpp  InteractableObject.hpp  InteractionPopup.cpp  InteractionPopup.hpp  LevelTransition.cpp  LevelTransition.hpp  MessageBox.cpp  MessageBox.hpp  Orientations for room shape generation.txt  Player.cpp  Player.cpp.bak  Player.hpp  PlayerDeath.cpp  PlayerDeath.hpp  Room.cpp  Room.hpp  RoomShapeGenerator-backup  RoomShapeGenerator.cpp  Water.cpp  Water.hpp
MainGame/particles/: ParticleBatch.cpp  ParticleBatch.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  TextureExplosion.cpp  TextureExplosion.hpp
MainGame/readerwriterqueue/: LICENSE.md  readerwriterqueue.h
MainGame/rendering/: Drawable.hpp  Renderer.cpp  Renderer.hpp  Texture.hpp  WindowHandler.cpp  WindowHandler.hpp  command data.txt  readPng.cpp  readPng.hpp
MainGame/resources/: #Memory.hpp#  FilesystemResourceLocator.cpp  FilesystemResourceLocator.hpp  FontHandler.cpp  FontHandler.hpp  Memory.hpp  ResourceLoader.cpp  ResourceLoader.hpp  ResourceLocator.hpp  ResourceManager.cpp  ResourceManager.hpp  SFMLStreamWrapper.cpp  SFMLStreamWrapper.hpp
MainGame/scene/: FileSelectScene.cpp  FileSelectScene.hpp  GameScene.cpp  GameScene.hpp  MidLevelScene.cpp  MidLevelScene.hpp  PauseScene.cpp  PauseScene.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SettingsScene.cpp  SettingsScene.hpp  TextTestScene.cpp  TextTestScene.hpp  TitleScene.cpp  TitleScene.hpp  Transition.cpp  Transition.hpp
MainGame/settings/: AudioSettings.hpp  InputSettings.hpp  Settings.hpp  SettingsLoadStore.cpp  SettingsReadersWriters.cpp  VideoSettings.hpp
MainGame/streams/: FileOutputStream.cpp  FileOutputStream.hpp  MemoryOutputStream.cpp  MemoryOutputStream.hpp
MainGame/ui/: UIButton.cpp  (+17 more)
Resources/: CMakeLists.txt  common-defs.tsx  common-defs.tsxinc  golden-token-particles.pex  gui-left.pngbak  level1.lvx  level1.lvx.bak  level1.tsx  level10.lvx  level10.tsx  level2.lvx  level2.tsx  level3.lvx  level3.tsx  level4.lvx  level4.tsx  level5.lvx  level5.tsx  level6.lvx  level6.tsx  level7.lvx  level7.tsx  level8.lvx  level8.tsx  level9.lvx  level9.tsx  player-particles.pex  room0.tmx  room1-00.tmx  room1-01.tmx  room1-02.tmx  room1-03.tmx  room1-04.tmx  room1-05.tmx  room1-07.tmx  room1-08.tmx  room1-09.tmx  room1-10.tmx  room1-11.tmx  room1-12.tmx  (+29 more)
(+126 files in other folders)
